--- a/views/Portfolio.html
+++ b/views/Portfolio.html
@@ -28,7 +28,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/css.css">
+    <link rel="stylesheet" href="css.css">
 </head>
 
 <body>
@@ -42,10 +42,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="/contact"> <button type="button" class="btn btn-primary btn-lg active">Main</button>
+              <a href="/main"> <button type="button" class="btn btn-primary btn-lg active">Main</button>
             </li>
             <li>
-              <a href="/index"><button type="button" class="btn btn-primary btn-lg active">Contact</button>
+              <a href="/Contact"><button type="button" class="btn btn-primary btn-lg active">Contact</button>
             </li>
           </ul>
         </div>
@@ -59,15 +59,15 @@
           </div>
           <div class="row">
             <div class="col-sm-4 col-sm-4">
-              <img src="../assets/Murial.jpg" class="img-thumbnail" width="304" height="100">
-              <img src="../assets/Murial.jpg" class="img-thumbnail" width="304" height="100">
-              <img src="../assets/Murial.jpg" class="img-thumbnail" width="304" height="0">
+              <img src="Murial.jpg" class="img-thumbnail" width="304" height="100">
+              <img src="Murial.jpg" class="img-thumbnail" width="304" height="100">
+              <img src="Murial.jpg" class="img-thumbnail" width="304" height="0">
             </div>
             <div class="col-sm-4 col-xs-4">
               <div class="caption">
-                  <img src="../assets/Murial.jpg" class="img-thumbnail" width="304" height="100">
-                  <img src="../assets/Murial.jpg" class="img-thumbnail" width="304" height="100">
-                  <img src="../assets/Murial.jpg" class="img-thumbnail" width="304" height="0">
+                  <img src="Murial.jpg" class="img-thumbnail" width="304" height="100">
+                  <img src="Murial.jpg" class="img-thumbnail" width="304" height="100">
+                  <img src="Murial.jpg" class="img-thumbnail" width="304" height="0">
               </div>
             </div>
           </div>
@@ -77,9 +77,9 @@
             <h3><strong>Connect With Me</strong></h3>
             <hr>
             <div class= "panel-body">
-              <img src="../assets/if_square-linkedin_317725.png" width="120"  height="100">
-              <img src="../assets/if_social_media_logo_github_1221585.png" width="120" height="100">
-              <img src="../assets/Stack overflow.png"  width="100" height="100">
+              <img src="if_square-linkedin_317725.png" width="120"  height="100">
+              <img src="if_social_media_logo_github_1221585.png" width="120" height="100">
+              <img src="Stack overflow.png"  width="100" height="100">
             </div>
           </div>
         </div>
