--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/css.css">
+    <link rel="stylesheet" href="css.css">
 </head>
 
 <body>
@@ -62,7 +62,7 @@
           </div>
           <div class="row">
             <div class="col-sm-6 col-sm-12">
-              <img src="../assets/Murial.jpg" class="img-thumbnail" width="304" height="236">
+              <img src="Murial.jpg" class="img-thumbnail" width="304" height="236">
             </div>
             <div class="col-sm-4 col-xs-4">
               <div class="caption">
@@ -79,9 +79,9 @@
             <h3><strong>Connect With Me</strong></h3>
             <hr>
             <div class= "panel-body">
-              <img src="../assets/if_square-linkedin_317725.png" width="120"  height="100">
-              <img src="../assets/if_social_media_logo_github_1221585.png" width="120" height="100">
-              <img src="../assets/Stack overflow.png"  width="100" height="100">
+              <img src="if_square-linkedin_317725.png" width="120"  height="100">
+              <img src="if_social_media_logo_github_1221585.png" width="120" height="100">
+              <img src="Stack overflow.png"  width="100" height="100">
             </div>
           </div>
         </div>
