--- a/views/Contact.html
+++ b/views/Contact.html
@@ -24,10 +24,12 @@
                                     </div>
                               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                   <ul class="nav navbar-nav navbar-right">
-                                      <li><a href="index.html">About</a></li>
+                                      <!-- <li><a href="index.html">About</a></li>
                                       <li><a href="Portfolio.html">Portfolio</a></li>
-                                      <li><a href="Contact.html">Contact</a></li>
-                                    </ul>
+                                      <li><a href="Contact.html">Contact</a></li> -->
+                                  <a href="/Index"><button type="button" class="btn btn-primary btn-lg active">Index</button> 
+                                  <a href="/Portfolio"><button type="button" class="btn btn-primary btn-lg active">Portfolio</button>
+                                  </ul>
                               </div>
                             </div>
                           </nav>
@@ -52,9 +54,9 @@
                                         <h3><strong>Connect With Me</strong></h3>
                                         <hr>
                                         <div class= "panel-body">
-                                          <img src="if_square-linkedin_317725.png" width="120"  height="100">
-                                          <img src="if_social_media_logo_github_1221585.png" width="120" height="100">
-                                          <img src="Stack overflow.png"  width="100" height="100">
+                                          <a href="https://www.linkedin.com/in/murial-anindo-29a15328/"><button type="button" class="btn btn-primary btn-lg active"><img src="if_square-linkedin_317725.png" width="120"  height="100"></a>
+                                            <a href="https://github.com/twentymurial33"><img src="if_social_media_logo_github_1221585.png" width="120" height="100"></a>
+                                          <!-- <img src="Stack overflow.png"  width="100" height="100"> -->
                                         </div>
                                       </div>
                                     </div>
