--- a/views/Portfolio.html
+++ b/views/Portfolio.html
@@ -20,6 +20,10 @@
    .footer{
      text-align: center;
    }
+
+   .container-fluid{
+     background-color: black;
+   }
     
   </style>
   <meta charset="UTF-8">
@@ -37,16 +41,11 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Murial Anindo</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="/main"> <button type="button" class="btn btn-primary btn-lg active">Main</button>
-            </li>
-            <li>
-              <a href="/Contact"><button type="button" class="btn btn-primary btn-lg active">Contact</button>
-            </li>
+              <a href="/Contact"><button type="button" class="btn btn-primary btn-lg active">Contact</button> 
+              <a href="/main"><button type="button" class="btn btn-primary btn-lg active">main</button> 
           </ul>
         </div>
       </div>
@@ -77,9 +76,9 @@
             <h3><strong>Connect With Me</strong></h3>
             <hr>
             <div class= "panel-body">
-              <img src="if_square-linkedin_317725.png" width="120"  height="100">
-              <img src="if_social_media_logo_github_1221585.png" width="120" height="100">
-              <img src="Stack overflow.png"  width="100" height="100">
+                <a href="https://www.linkedin.com/in/murial-anindo-29a15328/"><button type="button" class="btn btn-primary btn-lg active"><img src="if_square-linkedin_317725.png" width="120"  height="100"></a>
+                <a href="https://github.com/twentymurial33"><img src="if_social_media_logo_github_1221585.png" width="120" height="100"></a>
+              
             </div>
           </div>
         </div>
