--- a/views/index.html
+++ b/views/index.html
@@ -41,15 +41,9 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="index.html">About</a>
-            </li>
-            <li>
-              <a href="Portfolio.html">Portfolio</a>
-            </li>
-            <li>
-              <a href="Contact.html">Contact</a>
-            </li>
+              <a href="/Contact"><button type="button" class="btn btn-primary btn-lg active">Contact</button> 
+              <a href="/Portfolio"><button type="button" class="btn btn-primary btn-lg active">Portfolio</button>
+              <a href="/main"><button type="button" class="btn btn-primary btn-lg active">main</button> 
           </ul>
         </div>
       </div>
@@ -66,10 +60,10 @@
             </div>
             <div class="col-sm-4 col-xs-4">
               <div class="caption">
-                <p>Murial Anindo is very fun and simple girl who enjoys the simple pleasures in life.Hoping to be a kick ass
+                <p><strong>Murial Anindo is very fun and simple girl who enjoys the simple pleasures in life.Hoping to be a kick ass
                   web developer.Why Web Development
                   <br>Having been a PM in the industry for a while its time to switch gears and do something more hands on.
-                  <br>Every adventure is super scary at first,but we are going to stick to it and finish it</p>
+                  <br>Every adventure is super scary at first,but we are going to stick to it and finish it</p></strong>
               </div>
             </div>
           </div>
@@ -79,9 +73,9 @@
             <h3><strong>Connect With Me</strong></h3>
             <hr>
             <div class= "panel-body">
-              <img src="if_square-linkedin_317725.png" width="120"  height="100">
-              <img src="if_social_media_logo_github_1221585.png" width="120" height="100">
-              <img src="Stack overflow.png"  width="100" height="100">
+                <a href="https://www.linkedin.com/in/murial-anindo-29a15328/"><button type="button" class="btn btn-primary btn-lg active"><img src="if_square-linkedin_317725.png" width="120"  height="100"></a>
+                <a href="https://github.com/twentymurial33"><img src="if_social_media_logo_github_1221585.png" width="120" height="100"></a>
+              
             </div>
           </div>
         </div>
